# dino-bot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  bot.py  bot.yaml  bot_helper.py  bot_logic.py  bot_utils.py  config.py  dino_bot_debug.txt  gamestate.py  pathfinding.py  pyproject.toml
src/: bot.py  bot_logic.py  config.py  debug.py  gamestate.py  graph.py  pathfinding.py  random_seed.py  schemas.py  strategy.py  strategy_register.py  visibility.py
src/strategies/: aco.py  combined.py  coverage.py  evaluators.py  exploration.py  gem_collection.py  patrol.py  planners.py  schemas.py  set_cover.py  simple.py  tactics.py  unstucking.py
tests/: test_bot.py  test_bot_integration.py  test_bot_logic.py  test_graph.py  test_pathfinding.py  test_pathfinding_other.py  test_patrol.py  test_strategy_register.py
tests/performance/: test_update_hidden_floors.py
