[tool.poetry]
name = "dino-bot"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
  {include = "src"},
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=8.4.2,<9.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = "^0.14.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
